# mrl

./: .buildinfo  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.rst  alpha_zero_runner.html  architecture.html  development.html  docker-compose.yaml  game_runner.html  games.html  genindex.html  index.html  limitations.html  objects.inv  oracles.html  policies.html  pyproject.toml  quick_start.html  references.html  release_notes.html  search.html  searchindex.js  tutorials.html
.github/workflows/: gh-pages.yaml
_sources/: alpha_zero_runner.rst.txt  architecture.rst.txt  development.rst.txt  game_runner.rst.txt  games.rst.txt  index.rst.txt  limitations.rst.txt  oracles.rst.txt  policies.rst.txt  quick_start.rst.txt  references.rst.txt  tutorials.rst.txt
doc/source/: alpha_zero_runner.rst  architecture.rst  conf.py  games.rst  index.rst  policies.rst  quick_start.rst  references.rst  release_notes.rst  tutorials.rst
source/mrl/alpha_zero/: alpha_zero.py  alpha_zero_test.py  context.py  distributed_alpha_zero.py  experience_collector.py  experience_collector_test.py  mcts.py  mcts_observation.py  mcts_test.py  model_evaluation.py  model_trainer.py  model_trainer_test.py  model_updater.py  model_updater_test.py  models.py  models_test.py  oracle.py  oracle_test.py  random_rollout.py  report_generator.py  resume_test.py  self_play_process.py  self_play_process_test.py
source/mrl/configuration/: alpha_zero_configuration.py  alpha_zero_configuration_test.py  alpha_zero_factories.py  alpha_zero_runner_configuration.py  alpha_zero_runner_configuration_test.py  (+15 more)
(+57 files in other folders)
